<resources>
    <string name="app_name">Discharge Diary</string>
    <!--    Time     -->
    <string name="new_date_time">"%1s - %2s"</string>
    <string name="minutes_seconds_hint_text">Minutes : Seconds</string>
    <string name="time_zeros">00:00</string>
    <!--    Headers     -->
    <string name="entry_id">Entry #</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="consistency">Consistency:</string>
    <string name="color">Color:</string>
    <string name="discharge_type">Discharge Type:</string>
    <string name="duration">Duration:</string>
    <string name="leakage">Leakage:</string>
    <!--    Buttons     -->
    <string name="number_one">#1</string>
    <string name="number_two">#2</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="submit">Submit</string>
    <string name="incomplete">Entry Incomplete</string>
    <!--    Urine Color     -->
    <string name="urine_color_one">Clear</string>
    <string name="urine_color_two">Light Yellow</string>
    <string name="urine_color_three">Yellow</string>
    <string name="urine_color_four">Dark Yellow</string>
    <string name="urine_color_five">Red</string>
    <!--    Stool Color     -->
    <string name="stool_color_one">Light Grey</string>
    <string name="stool_color_two">Brown</string>
    <string name="stool_color_three">Dark Brown/Black</string>
    <string name="stool_color_four">Green</string>
    <string name="stool_color_five">Red Stool</string>
    <!--    Stool Consistency     -->
    <string name="consist_one">Severe Constipation</string>
    <string name="consist_two">Mild Constipation</string>
    <string name="consist_three">Normal</string>
    <string name="consist_four">Lacking Fiber</string>
    <string name="consist_five">Diarrhea</string>
    <string name="delete_button">Delete Button</string>
    <string name="export_text">export</string>
    <string name="clear_text">clear</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register">Register</string>
    <string name="n_a">N/A</string>
    <string name="entry_recorded">Entry Recorded</string>
</resources>