<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="loginViewModel"
            type="com.example.dischargediary.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mid_grey_tint"
        tools:context=".login.LoginActivity" >

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_top_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="@dimen/margin_top_group"
                android:text="@string/login"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_top_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_layout">

            <EditText
                android:id="@+id/new_user_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/new_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/confirm_new_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="@dimen/margin_top_group"
                android:text="@string/register" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/logged_in_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_top_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_layout">

            <TextView
                android:id="@+id/logged_in_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/med_text"
                android:gravity="center"
                android:hint="You are not logged in!"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>