<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="dischargeDiaryViewModel"
            type="com.example.dischargediary.dischargediary.DischargeDiaryViewModel" />
        <variable
            name="dischargeData"
            type="com.example.dischargediary.data.DischargeData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".dischargediary.DischargeDiaryFragment">

        <TextView
            android:id="@+id/dischargeDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@{dischargeDiaryViewModel.dischargeDateTime}"
            android:textAlignment="center"
            android:textSize="@dimen/title_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/numberOneButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:onClick="@{() -> dischargeDiaryViewModel.onNewEntry(1)}"
            android:text="@string/number_one"
            app:layout_constraintEnd_toStartOf="@+id/numberTwoButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dischargeDate" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/numberTwoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/number_two"
            android:onClick="@{() -> dischargeDiaryViewModel.onNewEntry(2)}"
            app:layout_constraintBaseline_toBaselineOf="@+id/numberOneButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/numberOneButton" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/discharge_list_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/clear_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberOneButton" >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/discharge_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_small"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:listData="@{dischargeDiaryViewModel.dischargeDiary}"
                app:spanCount="3"
                tools:itemCount="16"
                tools:listitem="@layout/discharge_grid_view"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_button"
            style="@style/DDLargeButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:paddingStart="@dimen/margin_large"
            android:paddingEnd="@dimen/margin_large"
            android:enabled="@{dischargeDiaryViewModel.clearButtonVisible}"
            android:onClick="@{() -> dischargeDiaryViewModel.onClearFromRepository()}"
            android:text="@string/clear_text"
            android:textSize="@dimen/sm_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/export_button"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/export_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:paddingStart="@dimen/margin_large"
            android:paddingEnd="@dimen/margin_large"
            android:text="@string/export_text"
            android:textSize="@dimen/sm_text"
            android:onClick="@{() -> dischargeDiaryViewModel.exportFile()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/clear_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>